@@ -21,6 +21,8 @@ AC_ARG_ENABLE(util,
 AC_ARG_ENABLE(example,
 	[  --enable-example        Compile with examples ])
 
+subdirs="include patch"
+
 if test "$enable_kernel_module" != "no"; then
 	AC_MSG_CHECKING([kernel source directory])
 	kernelsrc=
@@ -40,16 +42,7 @@ if test "$enable_kernel_module" != "no"; then
 		fi
 	fi
 	AC_MSG_RESULT([$kernelsrc])
-fi
 
-oldcc=$CC
-oldcross_compiling=$cross_compiling
-if test "$cross_compiling" = yes; then
-	CC=gcc
-	cross_compiling=no
-fi
-
-if test "$enable_kernel_module" != "no"; then
 	AC_MSG_CHECKING([kernel source version])
 	kernsrcver=`sed -ne '/^VERSION = \(.*\)/{s//\1/;p;q;}' $kernelsrc/Makefile`
 	kernsrcver="$kernsrcver.`sed -ne '/^PATCHLEVEL = \(.*\)/{s//\1/;p;q;}' $kernelsrc/Makefile`"
@@ -63,13 +56,7 @@ if test "$enable_kernel_module" != "no"; then
 *** configure the kernel before running this script])
 	fi
 	AC_MSG_RESULT([$kernsrcver])
-fi
 
-CC=$oldcc
-cross_compiling=$oldcross_compiling
-subdirs="include patch"
-
-if test "$enable_kernel_module" != "no"; then
 	KERNINCLUDE=$kernelsrc/include
 	AC_SUBST(KERNINCLUDE)
 	kmoduledir=/lib/modules/$kernsrcver
