@@ -11,6 +11,9 @@
 
 /* This file defines the library interface of FUSE */
 
+/* Now and forever: this interface uses 64 bit off_t */
+#define _FILE_OFFSET_BITS 64
+
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <utime.h>
